...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/add_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginEnd="@dimen/normal_margin"
                android:layout_weight="1"
...
                    android:layout_weight="0.5"
                    android:gravity="start"
                    android:text="@string/add_original_word"
                    android:textSize="@dimen/font_size" />

                <EditText
                    android:id="@+id/add_edit_your_word"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:ems="10"
                    android:inputType="text" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/add_foreign_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginTop="@dimen/big_margin"
                android:layout_marginEnd="@dimen/normal_margin"
                android:layout_weight="1"
...
                    android:layout_weight="0.5"
                    android:gravity="start"
                    android:text="@string/add_translation_word"
                    android:textSize="@dimen/font_size" />

                <EditText
                    android:id="@+id/add_edit_desired_word"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:ems="10"
                    android:inputType="text" />
            </LinearLayout>

            <Button
                android:id="@+id/add_add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/big_margin"
                android:layout_marginEnd="@dimen/big_margin"
                android:text="@string/add"
                app:layout_constraintEnd_toEndOf="parent"
...
