<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="start">Start</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="change">Change</string>
    <string name="submit">Submit</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>